# ULTIMATE-DATA-SCRAPER

./: .env.example  .gitignore  .pre-commit-config.yaml  BUGFIXES.md  Dockerfile  ENTERPRISE_QUALITY_CHECKLIST.md  ENTERPRISE_SAAS_GUIDE.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-fixed.txt  requirements.txt
database/: models.sql
databases/redis/: redis.conf
docs/api/: openapi.yaml
docs/architecture/: system-design.md
docs/deployment/: deployment-guide.md
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
monitoring/prometheus/: prometheus.yml
scripts/: migrate.sh  seed.sh  setup.sh
services/: api_service.py  asyncTasks.js  authentication.js  billingIntegration.js  emailService.js  monitoring.js  productionAPI.js  websocketSupport.js
services/agent-service/: Dockerfile  requirements.txt
services/analytics-service/: requirements.txt
services/api-gateway/: kong.yml  nginx.conf
services/api-service/: Dockerfile  gunicorn.conf.py  requirements.txt
services/billing-service/: requirements.txt
services/notification-service/: Dockerfile  requirements.txt
services/realtime-service/: package-lock.json  package.json
services/worker-service/: go.mod  go.sum  go.sum.bak
shared/kafka/: topics.py
shared/proto/: billing.proto  jobs.proto  scraping.proto
shared/schemas/: event_schemas.json  job_schemas.json
tests/e2e/: test_full_pipeline.py
tests/integration/: test_agents.py  test_api.py  test_workers.go
tests/load/: k6-script.js
ultimate-data-scraper/models/: user.py
(+134 files in other folders)
