[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultimate-data-scraper"
version = "0.1.0"
authors = [{name = "Your Name", email = "your.email@example.com"}]
description = "A tool for scraping data in an ultimate way"
readme = "README.md"
license = {text = "MIT"}
keywords = ["data", "scraping", "ultimate"]
homepage = "https://github.com/mehmood3020932/ULTIMATE-DATA-SCRAPER"
repository = "https://github.com/mehmood3020932/ULTIMATE-DATA-SCRAPER"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
files = "src"

[tool.pytest]
addopts = "--maxfail=1 --disable-warnings -q"
